# video_recover

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  compose.yaml  pyproject.toml
deploy/: com.codesfly.video-recover.worker.plist
docs/superpowers/plans/: 2026-07-17-balanced-web-workspace-implementation.md  2026-07-17-video-recover-implementation.md
docs/superpowers/specs/: 2026-07-17-balanced-web-workspace-design.md  2026-07-17-douyin-video-recover-design.md
scripts/: dev-check.sh  dev-down.sh  dev-up.sh  install-mac-worker.sh  install-mcp.sh  uninstall-mac-worker.sh
src/video_recover/: __init__.py  api.py  browser_import.py  browser_parser.py  config.py  crypto.py  domain.py  downloader.py  errors.py  main.py  mcp_server.py  mcp_stdio.py  parsers.py  repository.py  runner.py  service.py  transcribers.py  transcript.py  url_policy.py  web.py
src/video_recover/static/: app.css  app.js
src/video_recover/templates/: index.html
src/video_recover_mac/: __init__.py  client.py  config.py  main.py  transcriber.py
tests/: conftest.py
tests/e2e/: test_install_scripts.py  test_live_douyin.py  test_web_ui.py
tests/fixtures/: douyin_page.json  yt_dlp_info.json
tests/integration/: test_api.py  test_browser_import.py  test_downloader.py  test_health.py  test_mac_worker.py  test_mcp.py  test_parsers.py  test_repository.py  test_runner.py  test_service.py  test_web.py
tests/unit/: test_crypto.py  test_domain.py  test_mac_transcriber.py  test_transcript.py  test_url_policy.py
